--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.github.vincebrees.pokemonlist">
+          package="com.github.mkt26.pokemonlist">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-            android:name=".di.PokemonApplication"
+            android:name="com.github.mkt26.pokemonlist.di.PokemonApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".presentation.pokemonlist.PokemonListActivity">
+        <activity android:name="com.github.mkt26.pokemonlist.presentation.pokemonlist.PokemonListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -20,3 +22,4 @@
     </application>
 
 </manifest>
+
